--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -5,3 +5,15 @@ body,
   background: #eee;
   padding: 1em;
 }
+.messages {
+  height: 580px;
+  overflow-y: scroll;
+}
+
+.message__form {
+  position: fixed !important;
+  bottom: 1em;
+  margin-left: 320px !important;
+  left: 0;
+  right: 1em;
+}
