--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -6,7 +6,7 @@ body,
   padding: 1em;
 }
 .messages {
-  height: 440px;
+  height: 68vh;
   overflow-y: scroll;
 }
 
@@ -16,4 +16,9 @@ body,
   margin-left: 320px !important;
   left: 0;
   right: 1em;
+}
+
+.message__self {
+  border-left: 2px solid green;
+  padding-left: 8px;
 }
